application-workloads/solace/solace-message-router/nestedtemplates/security-shared-resources.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "securityGroupName": {
      "type": "string",
      "defaultValue": "solace-security",
      "metadata": {
        "description": "Security group defined to support PubSub+ message broker system level and default message vpn ports."
      }
    },
    "subnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "Subnet for PubSub+ message brokers."
      }
    },
    "location": {
      "type": "string",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {},
  "resources": [
    {
      "name": "[parameters('securityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-04-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "outbound",
            "properties": {
              "priority": 100,
              "sourceAddressPrefix": "[parameters('subnetPrefix')]",
              "protocol": "*",
              "destinationPortRange": "*",
              "access": "Allow",
              "direction": "Outbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "ad8741",
            "properties": {
              "priority": 150,
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('subnetPrefix')]",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "8741",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          },
          {
            "name": "ad8300",
            "properties": {
              "priority": 151,
              "protocol": "*",
              "sourceAddressPrefix": "[parameters('subnetPrefix')]",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "8300-8302",
              "destinationAddressPrefix": "[parameters('subnetPrefix')]"
            }
          },
          {
            "name": "ssh_host",
            "properties": {
              "priority": 200,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "22",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "ssh",
            "properties": {
              "priority": 201,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "2222",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "semp",
            "properties": {
              "priority": 202,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "8080",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "semptls",
            "properties": {
              "priority": 203,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "1943",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "smf",
            "properties": {
              "priority": 204,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "55555",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "smf-compressed",
            "properties": {
              "priority": 205,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "55003",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "smftls",
            "properties": {
              "priority": 206,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "55443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "webservices",
            "properties": {
              "priority": 207,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "8008",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "webtls",
            "properties": {
              "priority": 208,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "1443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "amqp",
            "properties": {
              "priority": 209,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "5672",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "mqtt",
            "properties": {
              "priority": 210,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "1883",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "mqttweb",
            "properties": {
              "priority": 211,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "8000",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "rest",
            "properties": {
              "priority": 212,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "9000",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    }
  ]
}
